--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 </head>
 <body>
     <h1>Kehinde Ekundayo</h1>
-    <img src="../HTML Resume/image.jpeg" alt="kehinde's photo" height="200">
-    <h2>Summary</h2>
+    <img src="image.jpeg" alt="kehinde's photo" height="200">    <h2>Summary</h2>
     <p>I am hardworking and delicatted individual with experience with experice in software development</p>
     <hr>
     <h2> Education</h2>
