--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Kehinde Ekundayo</h1>
-    <img src="image.jpeg alt="kehinde's photo" height="200">    
+    <img src="image.jpeg" alt="kehinde's photo" height="200">    
     <h2>Summary</h2>
     <p>I am hardworking and delicatted individual with experience with experice in software development</p>
     <hr>
@@ -69,8 +69,8 @@
     <hr>
     <h2>Other</h2>
     <ul>
-        <li><a href="../HTML Resume/hobbies.html">My Hobbies</a></li>
-        <li><a href="../HTML Resume/contact.html">Contact Me</a></li>
+        <li><a href=" Resume/hobbies.html">My Hobbies</a></li>
+        <li><a href=" Resume/contact.html">Contact Me</a></li>
     </ul>
     <FOoter>&copy; Kehinde Ekundayo. All rights reserved.
     </FOoter>
