--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
     <hr>
     <h2>Other</h2>
     <ul>
-        <li><a href=" Resume/hobbies.html">My Hobbies</a></li>
-        <li><a href=" Resume/contact.html">Contact Me</a></li>
+        <li><a href="hobbies.html">My Hobbies</a></li>
+        <li><a href="contact.html">Contact Me</a></li>
     </ul>
     <FOoter>&copy; Kehinde Ekundayo. All rights reserved.
     </FOoter>
